labs/lab7/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-monitor-service
  namespace: lab7
spec:
  selector:
    app: k8s-monitor
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
