labs/lab7/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-monitor-ingress
  namespace: lab7
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lab7.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-monitor-service
            port:
              number: 80
